Increase z-index to prevent cover with notification bar

--- a/src/login/styles/_Header.scss
+++ b/src/login/styles/_Header.scss
@@ -81,7 +81,7 @@
           display: flex;
           flex-direction: column;
           transition: all 0.5s ease;
-          z-index: 1;
+          z-index: 10;
           position: absolute;
           top: 70px;
           background-color: $white;
